Fix overlapping issue in friendly waters

--- a/styles.css
+++ b/styles.css
@@ -59,6 +59,7 @@ body{
 }
 .hit{
     background-color: rgb(168, 28, 28);
+    z-index: 2;
 }
 .valid{
     background-color: rgb(28, 168, 49);
@@ -76,6 +77,7 @@ body{
     background-color: rgb(74, 73, 69);
     text-align: center;
     padding: 1rem;
+    z-index: 1;
 }
 h3{
     font-family: 'Black Ops One', sans-serif;
